# ImGuiFontStudio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  main_opengl.cpp  main_vulkan.cpp
.github/workflows/: Build_Linux.yml  Build_Linux_Ubuntu.yml  Build_Linux_Vulkan.yml  Build_Osx.yml  Build_Osx_Catalina.yml  Build_Osx_Vulkan.yml  Build_Win.yml  Build_Win_Freetype  Build_Win_Freetype.yml  Build_Win_Master.yml  Build_Win_Vulkan.yml  codeql-analysis.yml  main.yml
Backends/common/freetype/: imgui_freetype.cpp  imgui_freetype.h
Backends/vulkan/: imgui_impl_vulkan_user_texture.cpp  imgui_impl_vulkan_user_texture.h
bugs/issue_7/: filemenu.ifs
cmake/: 3rdparty.cmake  ctools.cmake  freetype.cmake  imgui.cmake  imguifiledialog.cmake  polypartition.cmake  sfntly.cmake  tinyxml2.cmake  tracy.cmake  ttfrrw.cmake
doc/sample_for_cpp/embedded/: Generated_Font.cpp  Generated_Font.h
doc/sample_for_csharp/embedded/: Generated_Font_Bytes.cs  Generated_Font_Labels.cs
doc/ttf_file_format/: ttf.hm
projects/: ImGuiFileDialog.ifs  ImGuiFontStudio.ifs  NoodlesPlate.ifs  bugs.ifs  test.ifs  test2.ifs  test3.ifs
samples_Fonts/: README.md
src/: MainFrame.cpp  MainFrame.h  globals.h
src/Contrib/FontIcons/: Roboto_Medium.h
src/Contrib/ImWidgets/: README.md
src/Generator/: Compress.cpp  Compress.h  FontGenerator.cpp  FontGenerator.h  GenMode.cpp  GenMode.h  GenerationSummaryDialog.cpp  GenerationSummaryDialog.h  Generator.cpp  Generator.h  HeaderGenerator.cpp  HeaderGenerator.h  HeaderPictureGenerator.cpp  HeaderPictureGenerator.h  MemoryStream.cpp  MemoryStream.h
src/Gui/: CustomImGuiFileDialogConfig.h  GuiLayout.cpp  GuiLayout.h  ImGuiWidgets.cpp  ImGuiWidgets.h  ImWidgets.cpp  ImWidgets.h  RibbonBar.cpp  RibbonBar.h
src/Headers/: Globals.h  ImGuiFontStudioBuild.h
src/Helper/: AssetManager.cpp  AssetManager.h  FontHelper.cpp  FontHelper.h  FontParser.cpp  FontParser.h  FrameActionSystem.cpp  FrameActionSystem.h  ImGuiThemeHelper.cpp  ImGuiThemeHelper.h  MemoryStream.cpp  MemoryStream.h  MeshDecomposer.cpp  MeshDecomposer.h  Messaging.cpp  Messaging.h  Profiler.h  SelectionHelper.cpp  SelectionHelper.h  SettingsDlg.cpp  SettingsDlg.h  SimpleGlyphHelper.cpp  SimpleGlyphHelper.h  TextureHelper.cpp  TextureHelper.h  ThemeHelper.cpp  ThemeHelper.h  TranslationSystem.cpp  TranslationSystem.h  Utils.cpp  Utils.h  stb_truetype.h
src/ImguiImpl/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/ImguiImpl/freetype/: imgui_freetype.cpp  imgui_freetype.h  imgui_freetype_unleashed.cpp  imgui_freetype_unleashed.h
src/Panes/: DebugPane.cpp  DebugPane.h  FinalFontPane.cpp  FinalFontPane.h  FontPreviewPane.cpp  FontPreviewPane.h  FontStructurePane.cpp  FontStructurePane.h  GeneratorPane.cpp  GeneratorPane.h  GlyphPane.cpp  GlyphPane.h  MergedPane.cpp  MergedPane.h  ParamsPane.cpp  ParamsPane.h  SelectionFontPane.cpp  SelectionFontPane.h  SourceFontPane.cpp  SourceFontPane.h
src/Panes/Abstract/: AbstractPane.h  PerPaneSettings.h
src/Panes/Manager/: LayoutManager.cpp  LayoutManager.h
src/Project/: BaseGlyph.h  FontInfos.cpp  FontInfos.h  FontTestInfos.cpp  FontTestInfos.h  GlyphInfos.cpp  GlyphInfos.h  ProjectFile.cpp  ProjectFile.h
src/Res/: CustomFont.cpp  CustomFont.h  Roboto_Medium.cpp  btn.afdesign
